Bug 105854 - Tooltip during autofill is flickering while moving the mouse
Summary: Tooltip during autofill is flickering while moving the mouse
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-02-08 12:02 UTC by OfficeUser
Modified: 2017-02-24 18:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Video of the bug (rename to .mov after download) (1.02 MB, video/quicktime)
2017-02-08 12:02 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2017-02-08 12:02:05 UTC
Created attachment 131011 [details]
Video of the bug (rename to .mov after download)

Hi,

please view the attached video. (Sorry for the bad quality but it should be sufficient to watch the bug.)

This flickering of the yellow "bubble" during autofill while moving the mouse is a regression of build 5.3.0.3.

This bug is not present in 5.2.3.3.
Comment 1 OfficeUser 2017-02-08 12:09:27 UTC
Additional info:
Please note that it flickers which each pixel the mouse pointer is moved.
Comment 2 Xisco Faulí 2017-02-08 22:38:10 UTC
Moving it back to UNCONFIRMED until someone else confirms it...
Comment 3 Stéphane Guillou (stragu) 2017-02-08 23:58:50 UTC
I see some flickering in this case with the following on KXStudio 14.04 (based on Ubuntu 14.04 with KDE 4:

Version: 5.2.5.1
Build ID: 1:5.2.5~rc1-0ubuntu1~trusty0
CPU Threads: 2; OS Version: Linux 3.13; UI Render: default; VCL: gtk2; 
Locale: en-GB (en_GB.UTF-8); Calc: group

In my case I would not say it flickers "with each pixel the mouse pointer is moved", but it is noticeable.
Comment 4 OfficeUser 2017-02-09 08:23:52 UTC
Re-set to NEW because it is now confirmed by a second person.
Comment 5 Dennis Roczek 2017-02-17 08:32:40 UTC
What do you mean "with the yellow bubble"? You mean the tooltip which is next to the cell, or?

@OfficeUser: which os are you using? (please use Help --> About LibreOffice)

@stragu & OfficeUsder: Can you please try to deactivate OpenGL and restart LibreOffice if it is still flickering? Thanks
Comment 6 Aron Budea 2017-02-20 04:13:59 UTC Comment hidden (bibisection)
Comment 7 Aron Budea 2017-02-20 04:16:25 UTC
Flickering started with the commit referenced below. It occurs both with OpenGL and default rendering.
Adding Cc: to Caolán McNamara, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=ef044f82452af7b4c844d5ed1ca05869aafe21c5
author	Caolán McNamara <caolanm@redhat.com>	2016-10-19 13:13:54 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-10-19 13:14:16 (GMT)

"Resolves: tdf#100841 use Popover instead of Tooltip for the fill series hint"
Comment 8 Caolán McNamara 2017-02-20 15:42:21 UTC
can't actually reproduce the flickering myself, but from the looks of it and some local tracing I can see we're replacing the existing tooltip with one the exact same so it should be sufficient to just check if we will end up with the same tooltip before tearing down the old one and replacing it
Comment 9 Caolán McNamara 2017-02-20 17:27:16 UTC
I'm reasonably confident that https://cgit.freedesktop.org/libreoffice/core/commit/?id=4ad8d5aad67154d112dd69966eaa59bb89609f40 will fix this, backport in gerrit for 5-3 (with fixed id in commit message)
Comment 10 Aron Budea 2017-02-24 05:45:16 UTC
Verified with the following daily build.

Version: 5.4.0.0.alpha0+
Build ID: a8538f0774bd0fabf6012d735d1e86b3ff1c291f
CPU threads: 4; OS: Windows 6.1; UI render: GL; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2017-02-23_23:42:53
Locale: hu-HU (hu_HU); Calc: CL
Comment 11 Commit Notification 2017-02-24 18:08:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0acb7b80667b83ad05782dafa23721d0030c3b16&h=libreoffice-5-3

Resolves: tdf#105854 retain popover if it has the same pos, size and settings

It will be available in 5.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.