Resolves: tdf#105854 retain popover if it has the same pos, size and settings

Change-Id: I102874867020a3c471567cbdc97162c564351635
Reviewed-on: https://gerrit.libreoffice.org/34485
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>